// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logo icon should accept and use height 1`] = `
<svg
  fill="none"
  height="36"
  viewBox="0 0 32 32"
  width="10"
>
  <path
    clip-rule="evenodd"
    d="M17.6482 10.1305L15.8785 7.02583L7.02979 22.5499H10.5278L17.6482 10.1305ZM19.8798 14.0457L18.11 17.1983L19.394 19.4511H16.8453L15.1056 22.5499H24.7272L19.8798 14.0457Z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`logo icon should accept and use width 1`] = `
<svg
  fill="none"
  height="10"
  viewBox="0 0 32 32"
  width="36"
>
  <path
    clip-rule="evenodd"
    d="M17.6482 10.1305L15.8785 7.02583L7.02979 22.5499H10.5278L17.6482 10.1305ZM19.8798 14.0457L18.11 17.1983L19.394 19.4511H16.8453L15.1056 22.5499H24.7272L19.8798 14.0457Z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`logo icon should render logo icon correctly 1`] = `
<svg
  fill="none"
  height="36"
  viewBox="0 0 32 32"
  width="36"
>
  <path
    clip-rule="evenodd"
    d="M17.6482 10.1305L15.8785 7.02583L7.02979 22.5499H10.5278L17.6482 10.1305ZM19.8798 14.0457L18.11 17.1983L19.394 19.4511H16.8453L15.1056 22.5499H24.7272L19.8798 14.0457Z"
    fill="currentColor"
    fill-rule="evenodd"
  />
</svg>
`;
